--- a/data-diff-service/src/main/resources/application.yml
+++ b/data-diff-service/src/main/resources/application.yml
@@ -1,6 +1,11 @@
 spring:
   application:
     name: data-diff-service
+  data:
+    mongodb:
+      password: 'waes_assignment'
+      uri: mongodb://data_diff_user:${spring.data.mongodb.password}@localhost:27017/data_diff?retryWrites=true&w=majority
+
 server:
   port: 0
 eureka:
@@ -9,8 +14,6 @@ eureka:
     instanceId: ${spring.application.name}:${eureka.instance.hostname}:${random.value}
   client:
     serviceUrl:
-      #defaultZone: http://registry-service:8761/eureka
       defaultZone: http://${eureka.instance.hostname}:8761/eureka
-      #defaultZone: http://localhost:8761/eureka/
     fetch-registry: true
     register-with-eureka: true
