--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,10 +9,19 @@ services:
   data-diff-service:
     image: waes-assignment/data-diff-service
     hostname: data-diff-service
-    links:
-      - registry-service
     ports:
       - "6379-6385:9999"
     environment:
       EUREKA_CLIENT_SERVICEURL_DEFAULTZONE: http://registry-service:8761/eureka
 
+  mongo-database:
+    container_name: mongo-db
+    image: mongo
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: admin
+      MONGO_INITDB_ROOT_PASSWORD: admin
+      MONGO_INITDB_DATABASE: data_diff
+    ports:
+      - 27017:27017
+    volumes:
+      - ./data-diff-service/src/main/resources/database/init-mongo.js:/docker-entrypoint-initdb.d/init-mongo.js:ro
