--- a/data-diff-service/build.gradle
+++ b/data-diff-service/build.gradle
@@ -6,6 +6,7 @@ plugins {
 ext {
     set('springCloudVersion', 'Hoxton.SR9')
     set('swaggerVersion', '2.9.1')
+    set('commonsCodecVersion', '1.15')
 }
 
 apply plugin: 'io.spring.dependency-management'
@@ -26,7 +27,11 @@ dependencies {
     implementation(group: 'io.springfox', name: 'springfox-swagger2', version: swaggerVersion)
     implementation(group: 'io.springfox', name: 'springfox-swagger-ui', version: swaggerVersion)
 
-    compile(group: 'org.springframework.boot', name: 'spring-boot-starter-data-mongodb')
+    implementation(group: 'org.springframework.boot', name: 'spring-boot-starter-data-mongodb')
+
+    implementation(group: 'commons-codec', name: 'commons-codec', version: commonsCodecVersion)
+
+
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
