--- a/decoder-service/build.gradle
+++ b/decoder-service/build.gradle
@@ -5,6 +5,8 @@ plugins {
 
 ext {
     set('springCloudVersion', 'Hoxton.SR9')
+    set('swaggerVersion', '2.9.1')
+    set('commonsCodecVersion', '1.15')
 }
 
 apply plugin: 'io.spring.dependency-management'
@@ -18,6 +20,14 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
+
+    implementation(group: 'commons-codec', name: 'commons-codec', version: commonsCodecVersion)
+
+    implementation(group: 'io.springfox', name: 'springfox-swagger2', version: swaggerVersion)
+    implementation(group: 'io.springfox', name: 'springfox-swagger-ui', version: swaggerVersion)
+
+    compileOnly 'org.projectlombok:lombok'
+    annotationProcessor 'org.projectlombok:lombok'
 
 }
 
