Creates unit tests related to the services of the data-diff-service app

--- a/data-diff-service/src/main/resources/application.yml
+++ b/data-diff-service/src/main/resources/application.yml
@@ -11,6 +11,7 @@ server:
   port: 0
 eureka:
   instance:
+    appname: data-diff-service
     hostname: localhost
     instanceId: ${spring.application.name}:${eureka.instance.hostname}:${random.value}
   client:
