--- a/data-diff-service/build.gradle
+++ b/data-diff-service/build.gradle
@@ -5,11 +5,10 @@ plugins {
 
 ext {
     set('springCloudVersion', 'Hoxton.SR9')
-    //set('springCloudVersion', 'Hoxton.SR3')
     set('swaggerVersion', '2.9.1')
     set('commonsCodecVersion', '1.15')
     set('resilience4jVersion', '1.7.0')
-
+    set('lombokVersion', '1.18.12')
 }
 
 apply plugin: 'io.spring.dependency-management'
@@ -35,32 +34,16 @@ dependencies {
     implementation(group: 'io.springfox', name: 'springfox-swagger2', version: swaggerVersion)
     implementation(group: 'io.springfox', name: 'springfox-swagger-ui', version: swaggerVersion)
 
-
-    //Resilience
-    compile "io.github.resilience4j:resilience4j-spring-cloud2:${resilience4jVersion}"
-    compile('org.springframework.boot:spring-boot-starter-actuator')
-    compile('org.springframework.cloud:spring-cloud-starter-config')
-    implementation("io.micrometer:micrometer-registry-prometheus")
-
-
-
-
-
-    //Retry
-//    implementation group: 'org.springframework.retry', name: 'spring-retry', version: '1.3.1'
-//    implementation group: 'org.springframework', name: 'spring-aspects', version: '5.3.4'
-//    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-aop', version: '2.4.3'
-
-
-
-
-
-
-
     implementation(group: 'commons-codec', name: 'commons-codec', version: commonsCodecVersion)
 
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
+    //Tests
+    testImplementation('org.springframework.boot:spring-boot-starter-test') {
+        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
+    }
+
+    compileOnly(group: 'org.projectlombok', name: 'lombok',version: lombokVersion)
+    testCompileOnly(group: 'org.projectlombok', name: 'lombok',version: lombokVersion)
+    annotationProcessor(group: 'org.projectlombok', name: 'lombok',version: lombokVersion)
 }
 
 test {
