--- a/data-diff-service/src/main/resources/application.yml
+++ b/data-diff-service/src/main/resources/application.yml
@@ -12,11 +12,11 @@ server:
 eureka:
   instance:
     appname: data-diff-service
-    hostname: localhost
-    instanceId: ${spring.application.name}:${eureka.instance.hostname}:${random.value}
+    #hostname: localhost
+    instanceId: ${spring.application.name}:${eureka.instance.appname}:${random.value}
   client:
     serviceUrl:
-      defaultZone: http://${eureka.instance.hostname}:8761/eureka
+      defaultZone: http://localhost:8761/eureka
     fetch-registry: true
     register-with-eureka: true
 
