--- a/data-diff-service/src/integrationTest/resources/application.yml
+++ b/data-diff-service/src/integrationTest/resources/application.yml
@@ -17,13 +17,11 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:8761/eureka
-    fetch-registry: true
-    register-with-eureka: true
+    fetch-registry: false
+    register-with-eureka: false
 
 remote:
+  mock:
+    port: 9999
   decoder-service:
-    base-url: http://localhost:8082
-
-#logging:
-#  level:
-#    ROOT: DEBUG
+    base-url: http://localhost:${remote.mock.port}
